@@ -4,6 +4,11 @@ Changelog for plone.app.contentmenu
 
 plone.app.contentmenu - Unreleased
 
+    - Fixed more translation problems with the display menu.
+      This closes http://dev.plone.org/plone/ticket/6838 again and
+      http://dev.plone.org/plone/ticket/7115 as well.
+      [hannosch]
+
     - Fixed display menu to properly show content item titles with non-ascii
       chars. This closes http://dev.plone.org/plone/ticket/6838.
       [hannosch]
